force-app/main/default/objects/Registration__c/fields/Previous_Practicing_License__c.field-meta.xml
<CustomField>
    <fullName>Previous_Practicing_License__c</fullName>
    <label>Previous Practicing License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Patient Care - Conditional (CD#1)</fullName>
            </value>
            <value>
                <fullName>Direct Patient Care - Conditional (CD#4)</fullName>
            </value>
            <value>
                <fullName>Direct Patient Care - Conditional (CD#5)</fullName>
            </value>
            <value>
                <fullName>Direct Patient Care</fullName>
            </value>
            <value>
                <fullName>Indirect Patient Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>