force-app/main/default/objects/Registration__c/fields/Province_Of_Initial_Registration__c.field-meta.xml
<CustomField>
    <fullName>Province_Of_Initial_Registration__c</fullName>
    <label>Province Of Initial Registration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>