force-app/main/default/objects/Registration__c/fields/Province_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Province_of_Registration__c</fullName>
    <label>Province of Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>