force-app/main/default/objects/Registration__c/fields/Registrant__c.field-meta.xml
<CustomField>
    <fullName>Registrant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registrant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Account_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>