force-app/main/default/objects/Registration__c/fields/Registration_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Registration_Deadline__c</fullName>
    <label>Registration Deadline</label>
    <type>Date</type>
</CustomField>