force-app/main/default/objects/Registration__c/fields/Student_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Student_Registration_Date__c</fullName>
    <label>Student Registration Date</label>
    <type>Date</type>
</CustomField>