force-app/main/default/objects/Registration__c/fields/Transition_Period_Report__c.field-meta.xml
<CustomField>
    <fullName>Transition_Period_Report__c</fullName>
    <label>Transition Period Report</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>