force-app/main/default/objects/Registration__c/fields/Valid_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_to_Date__c</fullName>
    <label>Valid to Date</label>
    <type>Date</type>
</CustomField>