force-app/main/default/objects/Registration__c/fields/Year_Of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Year_Of_Graduation__c</fullName>
    <label>Year Of Graduation</label>
    <length>4</length>
    <type>Text</type>
</CustomField>