force-app/main/default/objects/Registration__c/recordTypes/Pharmacy.recordType-meta.xml
<RecordType>
    <fullName>Pharmacy</fullName>
    <active>true</active>
    <label>Pharmacy</label>
</RecordType>