force-app/main/default/objects/Registration__c/validationRules/Year_Of_Graduation_Value_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_Of_Graduation_Value_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>VALUE(Year_Of_Graduation__c) &gt; (YEAR(TODAY()) + 100)</errorConditionFormula>
    <errorMessage>Please enter valid value for Year Of Graduation.
Year of Graduation cannot be more than 100 years in the future.</errorMessage>
</ValidationRule>