force-app/main/default/objects/Registration__c/listViews/Registrations.listView-meta.xml
<ListView>
    <fullName>Registrations</fullName>
    <columns>NAME</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Initial_Registration_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Registrations</label>
</ListView>